# Pushshift-Importer

./: .gitignore  Cargo.toml  readme.md
src/: comment.rs  config.rs  decompress.rs  deser.rs  filter.rs  main.rs  storage.rs  submission.rs
src/reddit_types/: comment.rs  mod.rs  submission.rs
src/sqlite/: comment.sql  comment_fts.sql  mod.rs  submission.sql  submission_fts.sql
test_data/: test_comments.json  test_submissions.json
