[package]
name = "pushshift-importer"
version = "0.1.0"
authors = ["Paul Ellenbogen <PaulEllenbogen@gmail.com>"]
edition = "2021"

[profile.release]
debug = true

[dependencies]
clap = "2.33"
flate2 = "1.0"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
hashbrown = "0.13"
bzip2 = "0.4"
xz2 = "0.1"
zstd = "0.12"
anyhow = "1.0"
num_cpus = "1.0"
log = { version = "0.4", features = ["kv", "kv_std"] }
chrono = "0.4"
fallible-streaming-iterator = "0.1.9"
structured-logger = "1.0.3"

[dependencies.rusqlite]
version = "0.32"
features = ["bundled"]
