[package]
name = "pushshift-importer"
version = "0.1.0"
authors = ["Paul Ellenbogen <PaulEllenbogen@gmail.com>"]
edition = "2021"

[profile.release]
debug = true

[dependencies]
clap = { version = "4.5", features = ["derive"] }
flate2 = "1.0"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
ahash = "0.8"
bzip2 = "0.6"
xz2 = "0.1"
zstd = "0.13"
anyhow = "1.0"
num_cpus = "1.0"
log = { version = "0.4", features = ["kv", "kv_std"] }
chrono = "0.4"
fallible-streaming-iterator = "0.1.9"
structured-logger = "1.0.3"

[dependencies.rusqlite]
version = "0.37"
features = ["bundled"]